--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%-include('header.ejs')%>
+  <%-include('partials/header.ejs')%>
   <body>
     <header>
       <h1>GameHub</h1>
