--- a/views/invader.ejs
+++ b/views/invader.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%-include ('header.ejs')%>
+  <%-include ('partials/header.ejs')%>
   <body>
     <header>
       <h1>GameHub</h1>
